# dendritic

./: .coveragerc  .gitignore  .gitmodules  .kilocodeignore  .roomodes  AGENTS.md  CHANGES_SUMMARY.md  README.md  analyze_results.py  debug_perplexity.py  orchestrator-export.yaml  plot_confidence_results.py  plot_doubt_results.py  plot_self_conditioned_results.py  pyproject.toml  requirements_comparison.txt  run_tests.py  seekerrandom.py  setup.py  tmp_test.py  validate_fix.py
.roo/: system-prompt-dedup-orchestrator  system-prompt-refactor-cleanup
.roo/rules-architect/: AGENTS.md
.roo/rules-ask/: AGENTS.md
dendritic/: __init__.py  dataset_handlers.py  enhancement.py  layer.py
docs/: experiment_flow.md
plans/: confidence_experiment_plan.md  confidence_logging_improvements.md  confidence_logging_todo.md  confidence_net.md  confidence_token_pairing_flow.md  confidence_token_pairing_todo.md  dataset_refactoring.md  forward_loss_refactoring_plan.md  forward_loss_refactoring_todo.md  param_count_refactor.md  token_sampling_plan.md  token_sampling_todo.md
tests/: README.md  compare_experiments.py  conftest.py  enhance_test.py  test_data_pipelines.py  test_dataset_handlers.py  test_edge_cases.py  test_enhancement.py  test_error_handling.py  test_experiment_helpers.py  test_experiment_saving.py  test_flexible_scheduler.py  test_integration.py  test_layer.py  test_param_count_consistency.py  test_pretraining_experiment.py  test_pretraining_experiment_wikitext.py  test_run_experiments_helpers.py  test_sliding_window.py  test_sliding_window_integration.py
(+122 files in other folders)
