[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dendritic"
version = "0.1.0"
description = "Dendritic neural network layers for polynomial feature enhancement"
authors = [
    {name = "Your Name"}
]
dependencies = [
    "torch",
    "transformers",
    "datasets",
    "tqdm"
]
requires-python = ">=3.7"

[tool.pytest.ini_options]
timeout = 45
timeout_method = "thread"
timeout_func_only = true

