[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dendritic"
version = "0.1.0"
description = "Dendritic neural network layers for polynomial feature enhancement"
authors = [
    {name = "Your Name"}
]
dependencies = [
    "torch",
    "transformers",
    "datasets",
    "tqdm"
]
requires-python = ">=3.7"

[tool.pytest.ini_options]
timeout = 5
timeout_method = "thread"
timeout_func_only = true
[tool.ruff]
line-length = 120

[tool.ruff.lint]
# Enable Pylint (PL) and McCabe complexity (C90) rules
select = ["E", "F", "PLR", "C90"]

[tool.ruff.lint.pylint]
# The standard way to limit function length in Ruff (by statement count)
max-statements = 50  # Adjust this number to your preference

[tool.ruff.lint.mccabe]
# Limits how complex a function can be (nesting, loops, etc.)
max-complexity = 10